<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:padding="@dimen/padding"
    tools:context=".activities.fourthActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lblQuestion"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top"
            android:textColor="@color/white" />
    </LinearLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4">


        <TextView
            android:id="@+id/lblAnswer1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="48dp"
            android:layout_marginRight="48dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="3"
            android:gravity="top"
            android:text="question here..."
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.100000024" />

        <ToggleButton
            android:id="@+id/tgbAnswer1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:background="@color/colorPrimaryDark"
            android:textColor="@color/white"
            android:textOff="@string/wrong"
            android:textOn="@string/right"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="@+id/lblAnswer1" />

        <TextView
            android:id="@+id/lblAnswer2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="3"
            android:text="question here..."
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/lblAnswer3"
            app:layout_constraintEnd_toEndOf="@+id/lblAnswer1"
            app:layout_constraintStart_toStartOf="@+id/lblAnswer1"
            app:layout_constraintTop_toBottomOf="@+id/lblAnswer1" />

        <ToggleButton
            android:id="@+id/tgbAnswer2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:background="@color/colorPrimaryDark"
            android:textColor="@color/white"
            android:textOff="@string/wrong"
            android:textOn="@string/right"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="@+id/lblAnswer2" />

        <TextView
            android:id="@+id/lblAnswer3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="3"
            android:gravity="top"
            android:text="question here..."
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/lblAnswer1"
            app:layout_constraintStart_toStartOf="@+id/lblAnswer1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.9" />

        <ToggleButton
            android:id="@+id/tgbAnswer3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:background="@color/colorPrimaryDark"
            android:textColor="@color/white"
            android:textOff="@string/wrong"
            android:textOn="@string/right"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="@+id/lblAnswer3" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.75" />

    </android.support.constraint.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnBack"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark"
            android:text="@string/btnBack"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnKetThuc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding"
            android:layout_marginRight="@dimen/padding"
            android:layout_weight="1"
            android:background="@color/btnKetThuc"
            android:text="@string/btnKetThuc" />

        <Button
            android:id="@+id/btnNext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark"
            android:text="@string/btnNext"
            android:textColor="@color/white" />
    </LinearLayout>

</LinearLayout>